--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <title>Test work Webflow</title>
     <link href="css.css" rel="stylesheet">
-    <script src="js.js" defer></script>
+    <script src="js.js" type="module" defer></script>
 </head>
 <body>
+<div class="overlay"></div>
 <div class="popup">
     <div class="popup-title">
         <span>Form</span>
     </div>
     <div class="popup-body">
-        <form>
+        <form id="form">
             <div class="form-row">
                 <input id="user-name" name="user_name" />
             </div>
@@ -22,8 +23,13 @@
             <div class="form-row">
                 <input id="phone" name="phone" />
             </div>
+            <div class="form-row">
+                <button type="submit">Submit</button>
+            </div>
         </form>
     </div>
 </div>
+
+<button id="button" type="button">Open Form</button>
 </body>
 </html>
